fix: layout settings spacing

--- a/scss/_layout-settings.scss
+++ b/scss/_layout-settings.scss
@@ -95,7 +95,7 @@
     color: lighten($secondary, 10);
     font-size: 16px;
     display: block;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     margin-top: 10px;
   }
 
@@ -109,7 +109,7 @@
 
 /* Style Swticher Body */
 .layout-settings-body {
-  padding-top: 15px;
+  padding-top: 27px;
   padding-bottom: 25px;
   padding-right: 15px;
   padding-left: 15px;
@@ -118,7 +118,7 @@
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
   .no-col-space {
-    margin-bottom: 20px;
+    margin-bottom: 32px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
